--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,11 +2,6 @@ name: Tests
 
 on:
   pull_request:
-  push:
-    branches:
-      - nightly
-      - main
-      - release/*
   workflow_dispatch:
 
 jobs:
@@ -54,7 +49,7 @@ jobs:
           - "3.10"
           - "3.11"
           - "3.12"
-        runner: ["macos-12"]
+        runner: ["macos-latest"]
         include:
           - python-version: "3.8"
             runner: macos-m1-stable
@@ -62,7 +57,7 @@ jobs:
     uses: pytorch/test-infra/.github/workflows/macos_job.yml@main
     with:
       repository: pytorch/vision
-      # We need an increased timeout here, since the macos-12 runner is the free one from GH
+      # We need an increased timeout here, since the macos-latest runner is the free one from GH
       # and needs roughly 2 hours to just run the test suite
       timeout: 240
       runner: ${{ matrix.runner }}
