--- a/.github/workflows/build-conda-macos.yml
+++ b/.github/workflows/build-conda-macos.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - repository: pytorch/vision
+          - repository: framp/torchvision-intel
             pre-script: ""
             post-script: ""
             conda-package-directory: packaging/torchvision
