--- a/.github/workflows/build-conda-windows.yml
+++ b/.github/workflows/build-conda-windows.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - repository: pytorch/vision
+          - repository: framp/torchvision-intel
             pre-script: ""
             post-script: ""
             env-script: packaging/windows/internal/vc_env_helper.bat
