--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,7 +11,7 @@ jobs:
       id-token: write
       contents: read
     with:
-      repository: pytorch/vision
+      repository: framp/torchvision-intel
       upload-artifact: docs
       test-infra-ref: main
       script: |
@@ -72,14 +72,14 @@ jobs:
 
   upload:
     needs: build
-    if: github.repository == 'pytorch/vision' && github.event_name == 'push' &&
+    if: github.repository == 'framp/torchvision-intel' && github.event_name == 'push' &&
         ((github.ref_type == 'branch' && github.ref_name == 'main') || github.ref_type == 'tag')
     uses: pytorch/test-infra/.github/workflows/linux_job_v2.yml@main
     permissions:
       id-token: write
       contents: write
     with:
-      repository: pytorch/vision
+      repository: framp/torchvision-intel
       download-artifact: docs
       ref: gh-pages
       test-infra-ref: main
